Rewrote request to only get shops with the searched item, should cut down the response message